NGLASS-481 fix annotation list visibility issue

--- a/src/ui/annotations.css
+++ b/src/ui/annotations.css
@@ -27,10 +27,7 @@
   padding: 0px;
   margin-top: 2px;
   overflow-y: auto;
-  height: 0px;
   flex: 1;
-  flex-basis: 0px;
-  min-height: 0px;
 }
 
 .neuroglancer-annotation-list-entry {
